--- a/ShopApp.Data/ShopApp.Data.csproj
+++ b/ShopApp.Data/ShopApp.Data.csproj
@@ -5,11 +5,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Concrete\Oracle\" />
+    <ProjectReference Include="..\ShopApp.Entity\ShopApp.Entity.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShopApp.Entity\ShopApp.Entity.csproj" />
+    <Folder Include="Concrete\AdoNet\" />
+    <Folder Include="Concrete\Dapper\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
